NM-4828 improvements to custom templates
* After used the Custom Templates the page with password field to the MP is overridden
* Improve default layout to be more minimal and present more features of liquid views
* Improve search/index default view to actually display search results and render pagination
* Improve listings/show to display some basic listing information and contain form to book
* improve javascript and include it in layout
* add feature to display different custom template for instance admin [ for development purposes ]

--- a/app/default_templates/nearme/raw/views/home/index.html.liquid
+++ b/app/default_templates/nearme/raw/views/home/index.html.liquid
@@ -3,8 +3,5 @@
   <title>Super Cool Theme {{ params.controller }}</title>
 {% endcontent_for %}
 
-{% content_for 'tutorial' %}
-  this is tutorial content
-{% endcontent_for %}
-
 <h1>Hello liquid!</h1>
+<a href="/search">Search</a>
