--- a/app/views/instance_admin/custom_templates/custom_themes/_index_row.html.haml
+++ b/app/views/instance_admin/custom_templates/custom_themes/_index_row.html.haml
@@ -1,6 +1,7 @@
 %tr
   %td= custom_theme.name
   %td= custom_theme.in_use
+  %td= custom_theme.in_use_for_instance_admins
   %td
     = link_to t('instance_admin.custom_templates.liquid_views.liquid_views'), [:instance_admin, :custom_templates, custom_theme, :instance_views], class: 'pull-left btn btn-blue btn-bottom-margin'
     = link_to t('instance_admin.custom_templates.custom_theme_assets.custom_theme_asset'), [:instance_admin, :custom_templates, custom_theme, :custom_theme_assets], class: 'pull-left btn btn-blue btn-bottom-margin'
