--- a/app/views/instance_admin/custom_templates/custom_themes/_form.html.haml
+++ b/app/views/instance_admin/custom_templates/custom_themes/_form.html.haml
@@ -4,8 +4,10 @@
       = f.input :name, :placeholder => 'Name', input_html: { class: 'form-control' }
 
   .row
-    .input-container.col-xs-12
+    .input-container.col-xs-6
       = f.input :in_use, as: :boolean, inline_label: true
+    .input-container.col-xs-6
+      = f.input :in_use_for_instance_admins, as: :boolean, inline_label: true
 
   .row
     .input-container.col-xs-12
