--- a/app/views/listings/reservations/_confirm_reservations.html.haml
+++ b/app/views/listings/reservations/_confirm_reservations.html.haml
@@ -8,15 +8,16 @@
 
 - if @reservation_request
   %p.cancellation-info
-    - if @reservation_request.listing.transactable_type.cancellation_policy_hours_for_cancellation.zero?
+    - transactable_type = @reservation_request.listing.transactable_type
+    - if !transactable_type.cancellation_policy_enabled? || transactable_type.cancellation_policy_hours_for_cancellation.zero?
       = t('reservations.no_cancellation_time')
     - else
       %span.cancellation-time
         = t('reservations.cancellation_time', time: @reservation_request.listing.transactable_type.cancellation_policy_hours_for_cancellation)
 
-    - if @reservation_request.listing.transactable_type.cancellation_policy_penalty_percentage.zero? && @reservation_request.listing.transactable_type.cancellation_policy_penalty_hours.zero?
+    - if !transactable_type.cancellation_policy_enabled? || (transactable_type.cancellation_policy_penalty_percentage.zero? && transactable_type.cancellation_policy_penalty_hours.zero?)
       = t('reservations.no_cancellation_fee')
-    - elsif @reservation_request.listing.transactable_type.cancellation_policy_penalty_hours > 0
+    - elsif transactable_type.cancellation_policy_penalty_hours > 0
       = t('reservations.hours_cancellation_fee', fee: @reservation_request.listing.transactable_type.cancellation_policy_penalty_hours)
     - else
       %span.cancellation-fee
