--- a/app/views/comments/destroy.js.erb
+++ b/app/views/comments/destroy.js.erb
@@ -1,1 +1,1 @@
-$("[data-comment-id=<%= @comment.id %>]").hide("slow")
+$("[data-comment-id=<%= @comment.id %>]").hide('slow', function() { $(this).remove(); });
