--- a/app/frontend/stylesheets/intel/defaults/_defaults.scss
+++ b/app/frontend/stylesheets/intel/defaults/_defaults.scss
@@ -369,7 +369,7 @@ code {
     background-color: #f9f2f4;
     color: #c7254e;
     font-size: 80%;
-    white-space: nowrap;
+    white-space: pre;
 }
 
 hr {
