--- a/app/community_views/registrations/_show_activity.html.haml
+++ b/app/community_views/registrations/_show_activity.html.haml
@@ -17,4 +17,12 @@
             = t :about
           = simple_format auto_link(@user.properties.try(:about_me))
 
+        - video_embed_code = user_video_embed_html(@user)
+        - if video_embed_code.present?
+          / white box
+          .box-a
+            %h2
+              = t :video
+            = video_embed_code
+
         = render 'shared/featured_projects', projects: Project.featured.where.not(id: current_user.try(:feed_followed_projects) || []).take(10)
