--- a/app/views/instance_admin/settings/domains/_dns_record.html.haml
+++ b/app/views/instance_admin/settings/domains/_dns_record.html.haml
@@ -2,8 +2,13 @@
   %td= record.name
   %td= record.type
   %td
-    %pre
-      = record.alias_target && record.alias_target.dns_name
-      = record.resource_records.map(&:value).join("\n")
-    - if record.type == 'NS'
-      .small= t('instance_admin.settings.domains.hosted_zones.note')
+    .well
+      %ul
+        - if record.alias_target
+          %li= record.alias_target.dns_name
+        - record.resource_records.map(&:value).each do |val|
+          %li= val
+
+        - if record.type == 'NS'
+          %hr
+          .small= t('instance_admin.settings.domains.hosted_zones.note')
