NM-4877 Add missing create group button on group listview

--- a/app/frontend/stylesheets/community.scss
+++ b/app/frontend/stylesheets/community.scss
@@ -45,6 +45,7 @@
 @import "intel/modules/modal";
 @import "intel/modules/flash-messages";
 @import "intel/modules/group";
+@import "intel/modules/search";
 
 @import "intel/modules/intro-video";
 
