--- a/app/community_views/search/community.html.haml
+++ b/app/community_views/search/community.html.haml
@@ -2,6 +2,9 @@
   .contain
     / tabs
     %nav.tabs-a.trio.search-types
+      %p.actions
+        = link_to t(:create_group), new_dashboard_group_path, class: "button-a small orange add groups #{active_class(@search_type, 'groups', 'is-active')}"
+
       %ul
         %li{ class: active_class(@search_type, 'people', 'is-active')}
           = link_to t(:people), search_url(search_type: :people), data: { search_type: 'people'}
@@ -11,6 +14,7 @@
           = link_to t(:topics), search_url(search_type: :topics), data: { search_type: 'topics'}
         %li{ class: active_class(@search_type, 'groups', 'is-active')}
           = link_to t(:groups), search_url(search_type: :groups), data: { search_type: 'groups'}
+
     / white box
     .box-a
       .search-container
