--- a/app/views/instance_admin/settings/configuration/show.html.haml
+++ b/app/views/instance_admin/settings/configuration/show.html.haml
@@ -39,6 +39,9 @@
     .row
       .input-container.col-xs-6
         = f.input :skip_meta_tags, inline_label: true
+    .row
+      .input-container.col-xs-6
+        = f.input :test_email, inline_label: true
 
   .content-container
     %h4
