--- a/app/views/instance_admin/settings/configuration/show.html.haml
+++ b/app/views/instance_admin/settings/configuration/show.html.haml
@@ -42,8 +42,8 @@
 
     - if Rails.env.staging? # it's relevant only for staging -> staging_email.rb initializer
       .row
-        .input-container.col-xs-6
-          = f.input :test_email, inline_label: true
+        .input-container.col-xs-12
+          = f.input :test_email, input_html: { class: 'form-control' }, required: false
 
   .content-container
     %h4
