--- a/app/community_views/search/_groups.html.haml
+++ b/app/community_views/search/_groups.html.haml
@@ -1,1 +1,1 @@
-= render partial: 'shared/group', collection: @searcher.try(:results)
+= render partial: 'shared/group', collection: @searcher.try(:results).decorate
