NM-4882 Group owner cannot leave its own group

--- a/app/views/dashboard/group_members/_group_member.html.haml
+++ b/app/views/dashboard/group_members/_group_member.html.haml
@@ -15,6 +15,7 @@
         %span.intelicon-check
         = t(:approve)
 
-    %button.button-a.small{'data-href': dashboard_group_group_member_path(@group, group_member),"data-action": 'DELETE' }
-      %span.intelicon-trash-outlined
-      = t(:remove)
+    - unless @group.is_owner?(group_member.user_id)
+      %button.button-a.small{'data-href': dashboard_group_group_member_path(@group, group_member),"data-action": 'DELETE' }
+        %span.intelicon-trash-outlined
+        = t(:remove)
