NM-4883 Add missing notification messages

--- a/app/community_views/instance_admin/groups/groups/edit.html.haml
+++ b/app/community_views/instance_admin/groups/groups/edit.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for [:instance_admin, :groups, @group], html: { class: 'form-a', data: { modal: true } } do |f|
+= simple_form_for [:instance_admin, :groups, @group], html: { class: 'form-a' } do |f|
   .content-container
     %h4 Edit #{@group.name}
 
