--- a/app/frontend/stylesheets/intel/modules/_group.scss
+++ b/app/frontend/stylesheets/intel/modules/_group.scss
@@ -117,6 +117,11 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+        height: 20px;
+
+        &.missing-address:before {
+          content: '';
+        }
 
         &:first-of-type {
           color: #0071c5;
