NM-4863 Fixed enter submit on home page in ie11

--- a/app/frontend/stylesheets/sections/listings/_search.scss
+++ b/app/frontend/stylesheets/sections/listings/_search.scss
@@ -201,7 +201,9 @@ form.search-box {
   }
 
   input[type='submit'] {
-    display: none;
+    position: absolute;
+    left: -999em;
+    top: 0;
   }
 
   .input-wrapper {
