NM-4900 Fix text cursor styling issue in group type dropdown

--- a/app/frontend/stylesheets/intel/modules/_group.scss
+++ b/app/frontend/stylesheets/intel/modules/_group.scss
@@ -200,6 +200,14 @@
 
 .group, .group-form-controller {
 
+  .group_transactable_type {
+    .selectize-control {
+      [data-value] {
+        padding-right: 0 !important;
+      }
+    }
+  }
+
   .video-wrapper {
     max-width: 1000px;
     height: auto;
