NM-4899 Add validation to external video upload

--- a/app/frontend/stylesheets/intel/modules/_group.scss
+++ b/app/frontend/stylesheets/intel/modules/_group.scss
@@ -208,6 +208,14 @@
     }
   }
 
+  .video-form {
+    margin: 0;
+  }
+
+  .gallery-video {
+    margin-top: 20px;
+  }
+
   .video-wrapper {
     max-width: 1000px;
     height: auto;
