--- a/app/frontend/fonts/intel/icomoon/style.css
+++ b/app/frontend/fonts/intel/icomoon/style.css
@@ -1,124 +1,129 @@
 @font-face {
-	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?-mzmxxf');
-	src:url('fonts/icomoon.eot?#iefix-mzmxxf') format('embedded-opentype'),
-		url('fonts/icomoon.ttf?-mzmxxf') format('truetype'),
-		url('fonts/icomoon.woff?-mzmxxf') format('woff'),
-		url('fonts/icomoon.svg?-mzmxxf#icomoon') format('svg');
-	font-weight: normal;
-	font-style: normal;
+    font-family: 'icomoon';
+    src:    url('fonts/icomoon.eot?u1pn6e');
+    src:    url('fonts/icomoon.eot?u1pn6e#iefix') format('embedded-opentype'),
+        url('fonts/icomoon.ttf?u1pn6e') format('truetype'),
+        url('fonts/icomoon.woff?u1pn6e') format('woff'),
+        url('fonts/icomoon.svg?u1pn6e#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 [class^="icon-"], [class*=" icon-"] {
-	font-family: 'icomoon';
-	speak: none;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
 
-	/* Better Font Rendering =========== */
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-groups:before {
+    content: "\e900";
+}
 .icon-pencil:before {
-	content: "\f040";
+    content: "\f040";
 }
 .icon-trash:before {
-	content: "\f1f8";
+    content: "\f1f8";
 }
 .icon-star:before {
-	content: "\e617";
+    content: "\e617";
 }
 .icon-search:before {
-	content: "\e614";
+    content: "\e614";
 }
 .icon-facebook:before {
-	content: "\e60f";
+    content: "\e60f";
 }
 .icon-youtube:before {
-	content: "\e610";
+    content: "\e610";
 }
 .icon-tutarrow:before {
-	content: "\e61e";
+    content: "\e61e";
 }
 .icon-facebook-square:before {
-	content: "\e619";
+    content: "\e619";
 }
 .icon-github-square:before {
-	content: "\e61a";
+    content: "\e61a";
 }
 .icon-google-square:before {
-	content: "\e61b";
+    content: "\e61b";
 }
 .icon-linkedin-square:before {
-	content: "\e61c";
+    content: "\e61c";
 }
 .icon-twitter-square:before {
-	content: "\e61d";
+    content: "\e61d";
 }
 .icon-checked:before {
-	content: "\e600";
+    content: "\e600";
 }
 .icon-logo:before {
-	content: "\e601";
+    content: "\e601";
 }
 .icon-people:before {
-	content: "\e602";
+    content: "\e602";
 }
 .icon-projects:before {
-	content: "\e603";
+    content: "\e603";
 }
 .icon-topics:before {
-	content: "\e604";
+    content: "\e604";
 }
 .icon-unchecked:before {
-	content: "\e605";
+    content: "\e605";
 }
 .icon-close:before {
-	content: "\e616";
+    content: "\e616";
 }
 .icon-menu:before {
-	content: "\e615";
+    content: "\e615";
 }
 .icon-check:before {
-	content: "\e606";
+    content: "\e606";
 }
 .icon-linkedin:before {
-	content: "\e618";
+    content: "\e618";
 }
 .icon-google:before {
-	content: "\e611";
+    content: "\e611";
 }
 .icon-twitter:before {
-	content: "\e612";
+    content: "\e612";
 }
 .icon-instagram:before {
-	content: "\e613";
+    content: "\e613";
 }
 .icon-pin:before {
-	content: "\e607";
+    content: "\e607";
 }
 .icon-cross:before {
-	content: "\e608";
+    content: "\e608";
 }
 .icon-arrow-down:before {
-	content: "\e609";
+    content: "\e609";
 }
 .icon-arrow-right:before {
-	content: "\e60a";
+    content: "\e60a";
 }
 .icon-arrow-left:before {
-	content: "\e60b";
+    content: "\e60b";
 }
 .icon-arrow-up:before {
-	content: "\e60c";
+    content: "\e60c";
 }
 .icon-minus-circle:before {
-	content: "\e60d";
+    content: "\e60d";
 }
 .icon-plus-circle:before {
-	content: "\e60e";
+    content: "\e60e";
 }
+
