NM-4876 CSS for groups icon for Intel

--- a/app/frontend/stylesheets/intel/modules/_global-header.scss
+++ b/app/frontend/stylesheets/intel/modules/_global-header.scss
@@ -258,6 +258,11 @@
             content: '\e604';
         }
 
+        li.groups a:before {
+            content: '\e900';
+            font-size: 1.3em;
+        }
+
         li a [class*="intelicon-"] {
             margin-right: 5px;
         }
