NM-4859 Customizable photo uploader versions

--- a/app/community_views/onboarding/finish.html.haml
+++ b/app/community_views/onboarding/finish.html.haml
@@ -47,7 +47,7 @@
           .single-photo
             = new_file_upload_input("avatar",
               avatar_path,
-              @user.avatar.thumbnail_dimensions[:community_thumbnail],
+              @user.avatar.thumbnail_dimensions[:medium],
               "Upload Photo",
               "no-multiple" => true,
               :error => f.object.errors.include?(:avatar).present? ? "Please upload avatar." : nil) do
