--- a/app/community_views/shared/_group.html.haml
+++ b/app/community_views/shared/_group.html.haml
@@ -3,7 +3,7 @@
     %figure
       = link_to group_path(group) do
         - if group.cover_image.present?
-          = image_tag group.cover_image.url(:thumbnail)
+          = image_tag group.cover_image.url(:project_cover)
 
     %ul.numbers
       %li
