--- a/app/community_views/shared/components/_new_file_upload_input.html.haml
+++ b/app/community_views/shared/components/_new_file_upload_input.html.haml
@@ -1,4 +1,4 @@
-.fileupload{class: "#{options['no-multiple'] ? 'single-photo' : 'multi-photo'}"}
+.fileupload{class: "#{options['no-multiple'] ? 'single-photo' : 'multi-photo'}", 'data-role': options[:upload_type]}
   - if options[:'top-label'].present?
     .photo-top-label
       = options[:'top-label']
@@ -7,9 +7,8 @@
 
   %div{:'data-fileupload-wrapper' => true, :'data-url' => url, :'data-name' => name}
     .new-photo
-      = label_tag name, text
-      = file_field_tag name, multiple: !options['no-multiple'], accept: "image/*", capture: 'capture'
-
+      = label_tag name, text, for: options[:label_for] || name
+      = file_field_tag name, multiple: !options['no-multiple'], accept: "image/*", capture: 'capture', id: options[:label_for] || name
 
     - if hint
       %p.hint-block= hint
