--- a/app/views/instance_admin/settings/configuration/show.html.haml
+++ b/app/views/instance_admin/settings/configuration/show.html.haml
@@ -39,6 +39,9 @@
     .row
       .input-container.col-xs-6
         = f.input :skip_meta_tags, inline_label: true
+      - if Rails.env.staging?
+        .input-container.col-xs-6
+          = f.input :enable_sms_and_api_workflow_alerts_on_staging, as: :boolean, inline_label: true
 
     - if Rails.env.staging? # it's relevant only for staging -> staging_email.rb initializer
       .row
