NM-xxx add free booking checkbox to pricings

--- a/app/views/instance_admin/manage/transactable_types/action_types/_event_booking.html.haml
+++ b/app/views/instance_admin/manage/transactable_types/action_types/_event_booking.html.haml
@@ -16,6 +16,8 @@
         .col-md-2
           = pricing.input :max_price, as: :numeric
         .col-md-1
+          = pricing.input :allow_free_booking, :inline_label => true
+        .col-md-1
           = pricing.input :allow_book_it_out_discount, as: :boolean, :inline_label => true
         .col-md-1
           = pricing.input :allow_exclusive_price, as: :boolean, :inline_label => true
