--- a/app/frontend/stylesheets/intel/modules/_group.scss
+++ b/app/frontend/stylesheets/intel/modules/_group.scss
@@ -143,6 +143,12 @@
     }
   }
 
+  .location {
+    .map-container {
+      height: 100% !important;
+    }
+  }
+
   .gallery-a {
     li {
       width: (100%/3);
