--- a/app/views/dashboard/company/transactables/form_fields/_action_rfq.html.haml
+++ b/app/views/dashboard/company/transactables/form_fields/_action_rfq.html.haml
@@ -1,3 +1,5 @@
+- if f.object.transactable_type_action_type.allow_action_rfq? || f.object.transactable_type_action_type.allow_no_action?
+  %hr/
 - if f.object.transactable_type_action_type.allow_action_rfq?
   = f.input :action_rfq, as: :switch
 - if f.object.transactable_type_action_type.allow_no_action?
