--- a/app/views/instance_admin/manage/transactable_types/action_types/_pricing.html.haml
+++ b/app/views/instance_admin/manage/transactable_types/action_types/_pricing.html.haml
@@ -3,8 +3,9 @@
     = f.input :number_of_units, as: :numeric
   .col-md-2
     = f.input :unit, as: :select, collection: f.object.action.decorate.availabile_units_with_i18n
-  .col-md-2
-    = f.input :allow_free_booking
+  - if f.object.action.can_be_free?
+    .col-md-2
+      = f.input :allow_free_booking
   .col-md-2
     = f.input :min_price, as: :numeric
   .col-md-2
