IDM-98 filtering and sorting for groups

--- a/app/community_views/search/filters/_groups.html.haml
+++ b/app/community_views/search/filters/_groups.html.haml
@@ -1,8 +1,15 @@
 = simple_form_for '', url: search_url, html: { id: 'search_filter' } do |f|
   .filters-a
+    .box
+      %h3.hx
+        = t(:filter_by)
+
+      = f.input :group_type_id, as: :select, collection: GroupType.all, value_method: :id, label_method: :name, selected: params[:group_type_id], include_blank: true, required: false, wrapper_html: { class: 'drop role' }, input_html: { class: 'selectize' }, placeholder: t('group.placeholders.select_group_type')
+      = f.input :page, as: :hidden, input_html: { value: params[:page] }
+      = f.input :search_type, as: :hidden, input_html: { value: 'groups' }
+
     .results
       %span= @searcher.result_count
       = t :results_count
-    = f.input :query, as: :hidden, input_html: { value: params[:query] }
-    = f.input :page, as: :hidden, input_html: { value: params[:page] }
-    = f.input :search_type, as: :hidden, input_html: { value: 'groups' }
+
+      = f.input :sort, as: :select, collection: Group::SORT_OPTIONS, required: false, prompt: t(:sort, scope: [:simple_form, :placeholders, :search_filter]), input_html: { class: 'selectize' }, wrapper_html: { class: 'sort drop role' }, selected: params[:sort]
