IDM-95 fix displaying text links

--- a/app/frontend/stylesheets/intel/modules/_group.scss
+++ b/app/frontend/stylesheets/intel/modules/_group.scss
@@ -71,7 +71,11 @@
   section.links {
     .gallery-a {
       li {
-        width: 50%;
+        width: 100%;
+
+        img {
+          width: auto;
+        }
       }
     }
   }
