--- a/app/views/groups/_about.html.haml
+++ b/app/views/groups/_about.html.haml
@@ -51,7 +51,10 @@
           %ul.gallery-a
             - @group.links.each do |link|
               %li
-                = link_to image_tag(link.image.url(:standard)), link.url
+                - if link.image.present?
+                  = link_to image_tag(link.image.url(:standard)), link.url
+                - else
+                  = link_to link.text, link.url
 
   - if !@group.private? || current_user.try(:is_member_of?, @group)
     .secondary
