--- a/app/views/group_members/_group_members_button.html.haml
+++ b/app/views/group_members/_group_members_button.html.haml
@@ -5,5 +5,5 @@
     = t('group.request_sent')
 - elsif membership.waiting_for_user_response?
   = link_to t('group.accept'), [:accept, group, membership], class: 'button-a small', method: :patch, remote: true
-- elsif membership.approved? && !group.is_owner?(current_user.id)
+- elsif membership.approved? && !group.is_owner?(current_user)
   = link_to t('group.leave'), [group, membership], class: 'button-a small', method: :delete, remote: true
