IDM-90 add short description for group types

--- a/app/frontend/stylesheets/intel/modules/_group.scss
+++ b/app/frontend/stylesheets/intel/modules/_group.scss
@@ -153,6 +153,23 @@
     }
   }
 
+  .control-group {
+      &.group_transactable_type {
+        margin: 0 0 10px;
+      }
+  }
+
+  .group-type-description {
+    p {
+      display: none;
+      margin: 0;
+
+      &.active {
+        display: block;
+      }
+    }
+  }
+
   .gallery-a {
     li {
       width: (100%/3);
