NM-4901 Fix removing video on IE11/Edge

--- a/app/views/dashboard/groups/_video.html.haml
+++ b/app/views/dashboard/groups/_video.html.haml
@@ -1,6 +1,5 @@
 %li
-  = VideoEmbedder.new(video).html.html_safe
+  = VideoEmbedder.new(video, url_attributes: { wmode: :transparent }).html.html_safe
   %button.button-a.small.red.remove-video
     %span.intelicon-trash-outlined
   = hidden_field_tag 'group[properties][videos][]', video
-  
