--- a/app/community_views/search/filters/_groups.html.haml
+++ b/app/community_views/search/filters/_groups.html.haml
@@ -4,7 +4,8 @@
       %h3.hx
         = t(:filter_by)
 
-      = f.input :group_type_id, as: :select, collection: GroupType.all, value_method: :id, label_method: :name, selected: params[:group_type_id], include_blank: true, required: false, wrapper_html: { class: 'drop role' }, input_html: { class: 'selectize' }, placeholder: t('group.placeholders.select_group_type')
+      - group_type_collection = [GroupType.new(id: '_blank_', name: t('group.placeholders.all_groups')), GroupType.all].flatten
+      = f.input :group_type_id, as: :select, collection: group_type_collection, value_method: :id, label_method: :name, selected: params[:group_type_id], include_blank: t('group.placeholders.all_groups') , required: false, wrapper_html: { class: 'drop role' }, input_html: { class: 'selectize' }
       = f.input :page, as: :hidden, input_html: { value: params[:page] }
       = f.input :search_type, as: :hidden, input_html: { value: 'groups' }
 
